--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["jeisele@shipt.com"]
 
 [tool.poetry.dependencies]
-python = "3.9"
+python = "^3.9"
 fastapi = "^0.70.1"
 pydantic = "^1.9.0"
 motor = "^2.5.1"
